--- a/note/spring_test/fasion_mnist_test.ipynb
+++ b/note/spring_test/fasion_mnist_test.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.8.1-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
@@ -45,7 +22,76 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz to ../../data\\FashionMNIST\\raw\\train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../../data\\FashionMNIST\\raw\\train-images-idx3-ubyte.gz to ../../data\\FashionMNIST\\raw\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz to ../../data\\FashionMNIST\\raw\\train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "111.0%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../../data\\FashionMNIST\\raw\\train-labels-idx1-ubyte.gz to ../../data\\FashionMNIST\\raw\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz to ../../data\\FashionMNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../../data\\FashionMNIST\\raw\\t10k-images-idx3-ubyte.gz to ../../data\\FashionMNIST\\raw\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz to ../../data\\FashionMNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "159.1%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../../data\\FashionMNIST\\raw\\t10k-labels-idx1-ubyte.gz to ../../data\\FashionMNIST\\raw\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "# transforms\n",
     "transform = transforms.Compose(\n",
@@ -72,8 +118,7 @@
     "\n",
     "# constant for classes\n",
     "classes = ('T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat',\n",
-    "        'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle Boot')\n",
-    ""
+    "        'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle Boot')\n"
    ]
   },
   {
@@ -99,8 +144,7 @@
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
     "        x = self.fc3(x)\n",
-    "        return x\n",
-    ""
+    "        return x\n"
    ]
   },
   {
@@ -121,9 +165,56 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "[1,  1000] ava_loss: 1.55356\n[1,  2000] ava_loss: 0.86134\n[1,  3000] ava_loss: 0.72301\n[1,  4000] ava_loss: 0.66505\n[1,  5000] ava_loss: 0.59739\n[1,  6000] ava_loss: 0.55599\n[1,  7000] ava_loss: 0.52437\n[1,  8000] ava_loss: 0.52664\n[1,  9000] ava_loss: 0.49417\n[1, 10000] ava_loss: 0.48788\n[1, 11000] ava_loss: 0.45256\n[1, 12000] ava_loss: 0.47749\n[1, 13000] ava_loss: 0.40922\n[1, 14000] ava_loss: 0.43439\n[1, 15000] ava_loss: 0.41284\n[2,  1000] ava_loss: 0.39666\n[2,  2000] ava_loss: 0.38250\n[2,  3000] ava_loss: 0.38926\n[2,  4000] ava_loss: 0.38581\n[2,  5000] ava_loss: 0.35643\n[2,  6000] ava_loss: 0.40680\n[2,  7000] ava_loss: 0.38232\n[2,  8000] ava_loss: 0.37329\n[2,  9000] ava_loss: 0.34165\n[2, 10000] ava_loss: 0.35603\n[2, 11000] ava_loss: 0.36179\n[2, 12000] ava_loss: 0.35335\n[2, 13000] ava_loss: 0.36303\n[2, 14000] ava_loss: 0.36780\n[2, 15000] ava_loss: 0.35894\n[3,  1000] ava_loss: 0.35339\n[3,  2000] ava_loss: 0.33343\n[3,  3000] ava_loss: 0.32549\n[3,  4000] ava_loss: 0.32766\n[3,  5000] ava_loss: 0.31071\n[3,  6000] ava_loss: 0.33189\n[3,  7000] ava_loss: 0.32282\n[3,  8000] ava_loss: 0.32307\n[3,  9000] ava_loss: 0.31196\n[3, 10000] ava_loss: 0.33428\n[3, 11000] ava_loss: 0.32242\n[3, 12000] ava_loss: 0.31323\n[3, 13000] ava_loss: 0.30895\n[3, 14000] ava_loss: 0.30975\n[3, 15000] ava_loss: 0.30984\nFinished Training\n"
+     "output_type": "stream",
+     "text": [
+      "[1,  1000] ava_loss: 1.83718\n",
+      "[1,  2000] ava_loss: 0.90176\n",
+      "[1,  3000] ava_loss: 0.71733\n",
+      "[1,  4000] ava_loss: 0.67847\n",
+      "[1,  5000] ava_loss: 0.60404\n",
+      "[1,  6000] ava_loss: 0.58556\n",
+      "[1,  7000] ava_loss: 0.52820\n",
+      "[1,  8000] ava_loss: 0.49912\n",
+      "[1,  9000] ava_loss: 0.50080\n",
+      "[1, 10000] ava_loss: 0.47464\n",
+      "[1, 11000] ava_loss: 0.43549\n",
+      "[1, 12000] ava_loss: 0.47869\n",
+      "[1, 13000] ava_loss: 0.43995\n",
+      "[1, 14000] ava_loss: 0.41471\n",
+      "[1, 15000] ava_loss: 0.43339\n",
+      "[2,  1000] ava_loss: 0.40729\n",
+      "[2,  2000] ava_loss: 0.39121\n",
+      "[2,  3000] ava_loss: 0.39643\n",
+      "[2,  4000] ava_loss: 0.39025\n",
+      "[2,  5000] ava_loss: 0.37943\n",
+      "[2,  6000] ava_loss: 0.38009\n",
+      "[2,  7000] ava_loss: 0.39515\n",
+      "[2,  8000] ava_loss: 0.37670\n",
+      "[2,  9000] ava_loss: 0.36269\n",
+      "[2, 10000] ava_loss: 0.36963\n",
+      "[2, 11000] ava_loss: 0.37453\n",
+      "[2, 12000] ava_loss: 0.39974\n",
+      "[2, 13000] ava_loss: 0.36863\n",
+      "[2, 14000] ava_loss: 0.33468\n",
+      "[2, 15000] ava_loss: 0.36482\n",
+      "[3,  1000] ava_loss: 0.34075\n",
+      "[3,  2000] ava_loss: 0.33766\n",
+      "[3,  3000] ava_loss: 0.33489\n",
+      "[3,  4000] ava_loss: 0.34232\n",
+      "[3,  5000] ava_loss: 0.32821\n",
+      "[3,  6000] ava_loss: 0.31959\n",
+      "[3,  7000] ava_loss: 0.34916\n",
+      "[3,  8000] ava_loss: 0.32478\n",
+      "[3,  9000] ava_loss: 0.33205\n",
+      "[3, 10000] ava_loss: 0.32228\n",
+      "[3, 11000] ava_loss: 0.31878\n",
+      "[3, 12000] ava_loss: 0.31287\n",
+      "[3, 13000] ava_loss: 0.29733\n",
+      "[3, 14000] ava_loss: 0.30473\n",
+      "[3, 15000] ava_loss: 0.31872\n",
+      "Finished Training\n"
+     ]
     }
    ],
    "source": [
@@ -156,7 +247,22 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../../pth/fasion_mnist_test.pth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-6f53cf606a36>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mPATH\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"../../pth/fasion_mnist_test.pth\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mPATH\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\serialization.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(obj, f, pickle_module, pickle_protocol, _use_new_zipfile_serialization)\u001b[0m\n\u001b[0;32m    325\u001b[0m             \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    326\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 327\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mopened_file\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    328\u001b[0m         \u001b[0m_legacy_save\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mopened_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpickle_module\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpickle_protocol\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    329\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\serialization.py\u001b[0m in \u001b[0;36m_open_file_like\u001b[1;34m(name_or_buffer, mode)\u001b[0m\n\u001b[0;32m    210\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    211\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0m_is_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 212\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    213\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    214\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;34m'w'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\serialization.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, name, mode)\u001b[0m\n\u001b[0;32m    191\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_opener\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    192\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 193\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_open_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    194\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    195\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__exit__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../pth/fasion_mnist_test.pth'"
+     ]
+    }
+   ],
    "source": [
     "PATH=\"../../pth/fasion_mnist_test.pth\"\n",
     "torch.save(net.state_dict(),PATH)"
@@ -164,18 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "<All keys matched successfully>"
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
+   "outputs": [],
    "source": [
     "net = Net()\n",
     "net.load_state_dict(torch.load(PATH))"
@@ -183,15 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Accuracy of the network: 87 %\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "correct = 0\n",
     "total = 0\n",
@@ -209,15 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Accuracy of T-shirt/top : 87 %\nAccuracy of Trouser : 96 %\nAccuracy of Pullover : 84 %\nAccuracy of Dress : 90 %\nAccuracy of  Coat : 79 %\nAccuracy of Sandal : 92 %\nAccuracy of Shirt : 57 %\nAccuracy of Sneaker : 98 %\nAccuracy of   Bag : 97 %\nAccuracy of Ankle Boot : 90 %\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class_correct = list(0. for i in range(10))\n",
     "class_total = list(0. for i in range(10))\n",
@@ -245,5 +330,32 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "file_extension": ".py",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  },
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
